# FastClassSchedule

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
routers/: __init__.py
routers/client/: __init__.py  schedule.py  update.py  weather.py
routers/web/: __init__.py  autorun.py  config.py  schedule.py  statistic.py
routers/web/configs/: menu.py  schedule.py  setting.py  subjects.py  timetable.py
utils/: __init__.py  autorun.py  calc.py  ci.py  config.py  db.py  globalvar.py  path.py  verify.py  weather.py  ws.py
utils/schedule/: __init__.py  dataclasses.py  fix.py  helpers.py  inspect.py  resolve.py
