[project]
name = "fastclassschedule"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "apscheduler>=3.11.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "toml>=0.10.2",
    "uvicorn>=0.35.0",
]
